--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       - '3000:3000'
     volumes:
       - type: bind
-        source: ./portfolio
+        source: .
         target: /usr/src/app
     stdin_open: true
     tty: true
