--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - type: bind
         source: .
         target: /usr/src/app
+    env_file:
+      - .env
     stdin_open: true
     tty: true
     working_dir: /usr/src/app
